objects/MBO_GEO_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>GEO_Code__c</fullName>
        <description>This will define the GEO Code for the record.</description>
        <label>GEO Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_Type__c</fullName>
        <description>This will define the type of Geography. (Theatre, Country Group or Country)</description>
        <label>GEO Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Theatre</fullName>
                </value>
                <value>
                    <fullName>Country Group</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBO_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MBO Program</label>
        <referenceTo>MBO_Program__c</referenceTo>
        <relationshipLabel>MBO GEO Coverage</relationshipLabel>
        <relationshipName>MBO_GEO_Coverage</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <formula>MBO_Program__r.Track__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track</label>
        <type>Text</type>
    </fields>
    <description>This will provide coverage information for a given partner or Partner Group.</description>
    <label>MBO GEO Coverage</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBO GEO Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MBO_Program__c</columns>
        <columns>Track__c</columns>
        <columns>GEO_Type__c</columns>
        <columns>GEO_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>